<resources>

    <string name="app_name">Translation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="daily_one">每日一句</string>
    <string name="notebook">笔记本</string>
    <string name="settings">设置</string>

    <string name="search_notebook">搜索笔记</string>
    <string name="check_notebook">查看笔记本</string>

    <string name="OK">确定</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="got_it">知道了</string>

    <string name="input_hint">点击输入文字</string>
    <string name="no_network_connection">当前没有网络连接,请检查后重试</string>
    <string name="no_input">输入为空,请重新输入</string>

    <string name="translate">翻译</string>
    <string name="clear">清除已输入内容</string>
    <string name="retry">重试</string>
    <string name="trans_error">网络错误</string>
    <string name="error">发生了一些错误</string>


    <string name="add_to_notebook">添加笔记</string>
    <string name="original_text">原文</string>
    <string name="translated_text">译文</string>
    <string name="remove_from_notebook">删除成功</string>
    <string name="undo">撤销</string>
    <string name="copy_done">复制成功</string>
    <string name="copy_notdone">复制失败</string>
    <string name="copy">复制</string>
    <string name="share">分享</string>
    <string name="no_result_to_share">没有可以分享的结果</string>
    <string name="choose_app_to_share">请选择要分享的应用</string>

    <string name="action_search">搜索笔记</string>
    <string name="no_related_note">没有找到相关的笔记</string>

    <string name="daily_sen_text_1">우리 둘만。</string>
    <string name="daily_sen_text_2">새벽 색깔의 벽지를 바른 방에서 / 우리의 시간으로 짠 담요를 덮고 / 그 안에 둘만 폭 숨어서 / 다른 생각은 하지 말고 / 사랑만 했으면 좋겠어요。</string>
    <string name="no_note">没有笔记</string>
    <string name="network_error">网络出问题啦</string>

    <string name="basic_settings">基本设置</string>

    <string name="show_samples">显示网络释义</string>
    <string name="change_theme">切换主题</string>
    <string name="OCR">OCR</string>
    <string name="show_notification">通知栏翻译显示</string>


</resources>
