<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory android:title="@string/basic_settings">

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="false"
            android:key="showWebTran"
            android:title="@string/show_samples" />

        <!--<android.support.v7.preference.SwitchPreference-->
            <!--android:key="changeTheme"-->
            <!--android:title="@string/change_theme" />-->

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="false"
            android:key="showNotification"
            android:title="@string/show_notification" />

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>