<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_book_round"
        android:shortcutId="notebook"
        android:shortcutLongLabel="@string/check_notebook"
        android:shortcutShortLabel="@string/check_notebook">

        <intent
            android:action="com.tomspter.translator.notebook"
            android:targetClass="com.tomspter.translator.ui.MainActivity"
            android:targetPackage="com.tomspter.translator" />

        <categories android:name="android.shortcut.conversation" />

    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_calendar_round"
        android:shortcutId="dailyone"
        android:shortcutLongLabel="@string/daily_one"
        android:shortcutShortLabel="@string/daily_one">

        <intent
            android:action="com.tomspter.translator.dailyone"
            android:targetClass="com.tomspter.translator.ui.MainActivity"
            android:targetPackage="com.tomspter.translator" />

        <categories android:name="android.shortcut.conversation" />

    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_search_round"
        android:shortcutId="search"
        android:shortcutLongLabel="@string/search_notebook"
        android:shortcutShortLabel="@string/search_notebook">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.tomspter.translator.ui.SearchActivity"
            android:targetPackage="com.tomspter.translator" />

        <categories android:name="android.shortcut.conversation" />

    </shortcut>

</shortcuts>